--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -23,21 +23,20 @@
 [[main]]
   identifier = "web"
   pre = "link"
-  url = "https://nunocoracao.github.io/blowfish/"
+  url = "https://github.com/distiny-cool/distiny-cool.github.io"
   weight = 40
 
 [[main]]
   identifier = "github"
   pre = "github"
-  url = "https://github.com/nunocoracao/blowfish"
+  url = "https://github.com/distiny-cool"
   weight = 50
 
 [[main]]
   identifier = "twitter"
   pre = "twitter"
-  url = "https://twitter.com/burufugu"
+  url = "https://twitter.com/DistinyKody"
   weight = 60
-
 
 # -- Footer Menu --
 # The footer menu is displayed at the bottom of the page, just before
