--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -5,7 +5,7 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://nunocoracao.github.io/blowfish/docs/configuration/#theme-parameters
 
-colorScheme = "marvel"
+colorScheme = "ocean"
 defaultAppearance = "light" # valid options: light or dark
 autoSwitchAppearance = true
 
@@ -14,12 +14,15 @@ enableCodeCopy = true
 
 mainSections = ["posts"]
 # robots = ""
+highlightCurrentMenuArea = true
+smartTOC = true
+smartTOCHideUnfocusedChildren = true
 
 [header]
   layout = "fixed" # valid options: basic, fixed
 
 [footer]
- # showMenu = true
+  showMenu = true
   showCopyright = true
   showThemeAttribution = true
   showAppearanceSwitcher = true
@@ -27,11 +30,11 @@ mainSections = ["posts"]
 
 [homepage]
   layout = "background" # valid options: page, profile, hero, card, background, custom
-  homepageImage = "img/cover.png" # used in: hero, and card
+  homepageImage = "img/post-bg-desk.jpg" # used in: hero, and card
   showRecent = true
   showRecentItems = 3
   showMoreLink = true
-  showMoreLinkDest = "/blowfish_artist/posts"
+  showMoreLinkDest = "/posts"
   cardView = true
   cardViewScreenWidth = false
   layoutBackgroundBlur = true # only used when layout equals background
