--- a/config/_default/languages.zh-cn.toml
+++ b/config/_default/languages.zh-cn.toml
@@ -7,9 +7,9 @@ title = "且听风吟"
 displayName = "简体中文"
 isoCode = "zh-cn"
 rtl = false
-description = "My awesome website"
+description = "Kody的知识分享星球！"
 dateFormat = "2006年1月2日"
-logo = "logo/logo.png"
+# logo = "logo/logo.png"
 
 [author]
 name = "Kody Black"
