--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -34,7 +34,7 @@ smartTOCHideUnfocusedChildren = true
   showRecent = true
   showRecentItems = 3
   showMoreLink = true
-  showMoreLinkDest = "/posts"
+  showMoreLinkDest = "/blog/posts"
   cardView = true
   cardViewScreenWidth = false
   layoutBackgroundBlur = true # only used when layout equals background
