--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -3,7 +3,7 @@
 # https://nunocoracao.github.io/blowfish/docs/getting-started/
 
 theme = "blowfish"
-baseURL = "https://distiny-cool.github.io/blog/"
+baseURL = "https://kody-black.github.io/blog/"
 defaultContentLanguage = "zh-cn"
 
 enableRobotsTXT = true
