--- a/config/_default/languages.zh-cn.toml
+++ b/config/_default/languages.zh-cn.toml
@@ -16,4 +16,4 @@ name = "Kody Black"
 image = "img/robot.png"
 headline = "Actions speak louder than words."
 bio = "网络空间安全专业 SJTUer"
-links = [ { link = "https://github.com/distiny-cool/distiny-cool.github.io" }, { github = "https://github.com/distiny-cool" }, { x-twitter = "https://x.com/DistinyKody" } ]
+links = [ { link = "https://github.com/kody-black/blog" }, { github = "https://github.com/kody-black" }, { x-twitter = "https://x.com/DistinyKody" } ]
