评论+一个帖子+logo

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -43,6 +43,7 @@ smartTOCHideUnfocusedChildren = true
   showDate = true
   #showViews = true
   #showLikes = true
+  showComments = true
   showDateUpdated = false
   showAuthor = true
   showHero = true
@@ -50,7 +51,7 @@ smartTOCHideUnfocusedChildren = true
   showBreadcrumbs = true
   showDraftLabel = true
   showEdit = false
-  # editURL = "https://github.com/username/repo/"
+  editURL = "https://github.com/kody-black/blog/"
   editAppendPath = true
   seriesOpened = false
   showHeadingAnchors = true
