--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -16,9 +16,20 @@
   weight = 10
 
 [[main]]
+  name = "Categories"
+  pageRef = "categories"
+  weight = 20
+
+[[main]]
   name = "Tags"
   pageRef = "tags"
   weight = 20
+
+[[main]]
+  name = "About"
+  pageRef = "about"
+  weight = 25
+
 
 [[main]]
   identifier = "web"
